The application will have the left side listing the friends and components to add/remove them; the right side will be the area where the bill, expense, debt and payment-related information will be. A grid layout best suites this purpose. I used a min-height property to ensure  the .App div element does not get too short.

--- a/src/styles.css
+++ b/src/styles.css
@@ -24,3 +24,11 @@ body {
   align-items: center;
   justify-content: center;
 }
+
+.App {
+  min-height: 66vh;
+  display: grid;
+  grid-template-columns: 34rem 44rem;
+  column-gap: 4rem;
+  align-items: start;
+}
